<resources>
    <string name="app_name" translatable="false">Турніки.укр</string>
    <string name="dont_be_lazy_practice">НЕ ЛІНУЙСЯ, ТРЕНУЙСЯ!</string>
    <string name="best">Лучший</string>
    <string name="average">Среднее</string>
    <string name="workout">Тренировка</string>
    <string name="freestyle">Фристайл</string>
    <string name="statistics">Статистика</string>
    <string name="freestyle_train">Свободная тренировка</string>
    <string name="start">Старт</string>
    <string name="polozhite_telepfone_v_karman">Положите телефон в карман\nили повесьте на шею</string>
    <string name="proceed">Продолжить</string>
    <string name="notification">Уведомления</string>
    <string name="notif_enabled">Уведомление включено</string>
    <string name="time">Время</string>
    <string name="ringtone">Рингтон</string>
    <string name="vibr">Вибрация</string>
    <string name="settings">Настройки</string>
    <string name="sinhronize_with_google_fit">Автоматическая синхронизация с Google Fit</string>
    <string name="turniki_uk_settings"><font color="#FCE94E">Турники.</font><font color="#4575ED">укр</font> <font color="@color/red">Настройки</font></string>
    <string name="works_only_when_installed_on_the_phone_memory">Работает только при установке на память телефона</string>
    <string name="widget">Виджет</string>
    <string name="widget_desc">Для того, чтобы увидеть как использовать виджет Турники.укр</string>
    <string name="set_train_time">Установить время тренировки</string>
    <string name="reserve_stat">Резервировать статистику</string>
    <string name="reserve_stat_desc">Резервировать статистику на SD карту</string>
    <string name="restore_stat">Восстановить статистику</string>
    <string name="restore_stat_desc">Восстановить статистику с SD карты</string>
    <string name="delete_stat">Удалить статистику</string>
    <string name="delete_stat_desc">Удалить всю статистику</string>
    <string name="language">Язык</string>
    <string name="select_language">Выберите язык</string>
    <string name="localisation">Локализация</string>
    <string name="help_us_with_localisation">Помочь нам перевести ваш язык</string>
    <string name="other_settings"><font color="@color/red">Другие настройки</font></string>
    <string name="turniki_ukr"><font color="#FCE94E">Турники.</font><font color="#4575ED">укр</font></string>
    <string name="about_company">О компании</string>
    <string name="pro_version">PRO версия</string>
    <string name="More_from_our_app">Больше от нашего приложениия</string>
    <string name="share">Поделиться</string>
    <string name="share_for_friend">Поделиться с другом</string>
    <string name="support">Поддержка</string>
    <string name="Leave_feedback_by_email">Оставить отзыв по ел. почте</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="tyrnik_ukr_version">Турники.укр версия</string>
    <string name="_2_154_34_version">Версия 1.0 Авторское право</string>
    <string name="reminds_you_to_drink_water">Напоминает вам пить воду</string>
    <string name="test_pullup_text">Сделайте как можно больше подтягиваний без остановки. Ваша программа тренировки будет построена по результатам этого теста</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Oк</string>
    <string name="_1_365">1–365</string>
    <string name="notify_me_every">Уведомлять меня каждый</string>
    <string name="day">день</string>
    <string name="notification_text">Пора сделать тренировку!</string>
    <string name="Stop">Закончить</string>
    <string name="home">Домой</string>
    <string name="workout_is_end">Тренировка закончена</string>
    <string name="you_did">Вы сделали</string>
    <string name="reps">Повторений</string>
    <string name="progress_in_this_lvl">Прогресс на текущем уровне</string>
    <string name="set_today">Подходы на сегодня</string>
    <string name="total">Всего</string>
    <string name="begin">Начать</string>
    <string name="choose_lvl">Выбрать уровень</string>
    <string name="level">Уровень</string>
    <string name="pull_up_1">подтягивание</string>
    <string name="pull_up_2_4">подтягивания</string>
    <string name="pull_up_5">подтягиваний</string>
    <string name="do_text">Выполните</string>
    <string name="relax">Отдохните</string>
    <string name="final_workout_string">Приложение  корректирует вашу программу тренировок как настоящий персональный тренер.\n\n<font color="#4575ED">Легко.</font> (Перейди на следущий уровень)\n<font color="#4575ED">Как раз.</font> (Будьте в курсе   уровня)\n<font color="#4575ED">Тяжело.</font> (Вернуться  к легкому уровню)</string>
    <string name="easy">Легко</string>
    <string name="right">Как раз</string>
    <string name="hard">Тяжело</string>
    <string name="beginer">Новичок</string>
    <string name="medium">Любитель</string>
    <string name="pro">Профессионал</string>
    <string name="next_set">Полный</string>
    <string name="independently">Самостоятельно</string>
    <string name="exit">Выйти</string>
    <string name="notify" translatable="false">Notification</string>
    <string name="go_to_tren">Перейти к тренировкам</string>
    <string name="ahuenno">Отлично!</string>
    <string name="test_pop_up_text">На основе вашей физической формы, мы составили вам оптимальную программу тренировок</string>
    <string name="buy">Купить</string>
    <string name="pre_purchase_text">Эта программа тренировок доступна только на про версии</string>
</resources>