<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_left">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            style="@style/text20px"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_17sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical">

<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                android:id="@+id/synchronizationL"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

<!--                <TextView-->
<!--                    android:id="@+id/textView2"-->
<!--                    style="@style/text10px"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="@dimen/_7sdp"-->
<!--                    android:layout_marginEnd="@dimen/_15sdp"-->
<!--                    android:text="@string/turniki_uk_settings"-->
<!--                    app:layout_constraintEnd_toStartOf="@+id/synchronizationSwitch"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textView"-->
<!--                    style="@style/text14px"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="@dimen/_2sdp"-->
<!--                    android:layout_marginEnd="@dimen/_15sdp"-->
<!--                    android:text="@string/sinhronize_with_google_fit"-->
<!--                    app:layout_constraintEnd_toStartOf="@+id/synchronizationSwitch"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

<!--                <TextView-->
<!--                    style="@style/text10px"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/works_only_when_installed_on_the_phone_memory"-->
<!--                    android:textColor="@color/blue_light"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/textView" />-->

<!--                <com.google.android.material.switchmaterial.SwitchMaterial-->
<!--                    android:id="@+id/synchronizationSwitch"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    app:thumbTint="@color/thumb_color"-->
<!--                    app:trackTint="@color/track_color" />-->

<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="@color/gray_dark_24"/>-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:orientation="vertical"-->
<!--                android:layout_height="@dimen/_44sdp">-->

<!--                <TextView-->
<!--                    style="@style/text14px"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="0dp"-->
<!--                    android:layout_marginTop="@dimen/_5sdp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:gravity="bottom"-->
<!--                    android:text="@string/widget" />-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="0dp"-->
<!--                    android:layout_weight="1"-->
<!--                    style="@style/text10px"-->
<!--                    android:text="@string/widget_desc"-->
<!--                    android:textColor="@color/blue_light"/>-->
<!--            </LinearLayout>-->

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="@color/gray_dark_24"/>-->

            <LinearLayout
                android:id="@+id/notificationL"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="@dimen/_44sdp">

                <TextView
                    style="@style/text14px"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/notification" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/text10px"
                    android:text="@string/set_train_time"
                    android:textColor="@color/blue_light"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark_24"/>

            <LinearLayout
                android:id="@+id/backUpL"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="@dimen/_44sdp">

                <TextView
                    style="@style/text14px"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/reserve_stat" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/text10px"
                    android:text="@string/reserve_stat_desc"
                    android:textColor="@color/blue_light"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark_24"/>

            <LinearLayout
                android:id="@+id/restoreL"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="@dimen/_44sdp">

                <TextView
                    style="@style/text14px"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/restore_stat" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/text10px"
                    android:text="@string/restore_stat_desc"
                    android:textColor="@color/blue_light"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark_24"/>


            <LinearLayout
                android:id="@+id/deleteL"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="@dimen/_44sdp">

                <TextView
                    style="@style/text14px"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/delete_stat" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/text10px"
                    android:text="@string/delete_stat_desc"
                    android:textColor="@color/blue_light"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark_24"/>

            <LinearLayout
                android:id="@+id/languageL"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="@dimen/_44sdp">

                <TextView
                    style="@style/text14px"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/language" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/text10px"
                    android:text="@string/select_language"
                    android:textColor="@color/blue_light"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark_24"/>

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:orientation="vertical"-->
<!--                android:layout_height="@dimen/_44sdp">-->

<!--                <TextView-->
<!--                    style="@style/text14px"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="0dp"-->
<!--                    android:layout_marginTop="@dimen/_5sdp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:gravity="bottom"-->
<!--                    android:text="@string/localisation" />-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="0dp"-->
<!--                    android:layout_weight="1"-->
<!--                    style="@style/text10px"-->
<!--                    android:text="@string/help_us_with_localisation"-->
<!--                    android:textColor="@color/blue_light"/>-->
<!--            </LinearLayout>-->

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="@color/gray_dark_24"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                style="@style/text10px"
                android:text="@string/other_settings"/>

            <LinearLayout
                android:id="@+id/saitL"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="@dimen/_44sdp">

                <TextView
                    style="@style/text14px"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/turniki_ukr" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/text10px"
                    android:text="@string/about_company"
                    android:textColor="@color/blue_light"/>
            </LinearLayout>

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="@color/gray_dark_24"/>-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:orientation="vertical"-->
<!--                android:layout_height="@dimen/_44sdp">-->

<!--                <TextView-->
<!--                    style="@style/text14px"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="0dp"-->
<!--                    android:layout_marginTop="@dimen/_5sdp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:gravity="bottom"-->
<!--                    android:text="@string/pro_version" />-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="0dp"-->
<!--                    android:layout_weight="1"-->
<!--                    style="@style/text10px"-->
<!--                    android:text="@string/More_from_our_app"-->
<!--                    android:textColor="@color/blue_light"/>-->
<!--            </LinearLayout>-->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark_24"/>

            <LinearLayout
                android:id="@+id/shareL"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="@dimen/_44sdp">

                <TextView
                    style="@style/text14px"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/share" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/text10px"
                    android:text="@string/share_for_friend"
                    android:textColor="@color/blue_light"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark_24"/>

            <LinearLayout
                android:id="@+id/emailL"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="@dimen/_44sdp">

                <TextView
                    style="@style/text14px"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/support" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/text10px"
                    android:text="@string/Leave_feedback_by_email"
                    android:textColor="@color/blue_light"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark_24"/>

            <TextView
                style="@style/text14px"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_44sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/privacy_policy" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark_24"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="@dimen/_44sdp">

                <TextView
                    style="@style/text14px"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/tyrnik_ukr_version" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/text10px"
                    android:text="@string/_2_154_34_version"
                    android:textColor="@color/blue_light"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/_31sdp"
                android:background="@color/gray_dark_24"/>


<!--            <TextView-->
<!--                style="@style/text14px"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="@dimen/_44sdp"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/reminds_you_to_drink_water" />-->

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="@color/gray_dark_24"/>-->

        </LinearLayout>
    </ScrollView>

</LinearLayout>