<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.workout.ChooseLevelFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/choose_lvl"
        android:titleTextColor="@color/yellow"
        android:navigationIcon="@drawable/ic_arrow_left">
        <TextView
            android:id="@+id/okText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text20px"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_18sdp"
            android:textColor="@color/blue"
            android:text="@string/ok"/>
    </Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_32sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text18px"
                android:text="@string/beginer"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_12sdp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/beginnerRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text18px"
                    android:text="@string/medium"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_12sdp"/>

                <TextView
                    android:id="@+id/proText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/purchase_rectangle"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:padding="@dimen/_2sdp"
                    style="@style/text10px"
                    android:text="@string/pro_version"
                    android:layout_marginTop="@dimen/_10sdp"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mediumRec"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profiText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text18px"
                    android:text="@string/pro"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_12sdp"/>

                <TextView
                    android:id="@+id/proText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/purchase_rectangle"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:padding="@dimen/_2sdp"
                    style="@style/text10px"
                    android:text="@string/pro_version"
                    android:layout_marginTop="@dimen/_10sdp"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/proRec"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>